<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_3"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillColor="#F7F7F7"
    android:visibility="visible">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="520dp"
        android:layout_height="451dp"
        android:layout_marginBottom="432dp"
        android:src="@drawable/ic_launcher_background"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="291dp"
        android:layout_height="260dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774">

        <TextView
            android:id="@+id/res_secondary"
            style="@style/res_secondary"
            android:layout_width="276dp"
            android:layout_height="89dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="129dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="42dp"
            android:text="@string/res_secondary"
            android:fontFamily="@font/red_hat_display_black"/>

        <TextView
            android:id="@+id/conf_secondary"
            style="@style/conf_secondary"
            android:layout_width="139dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="165dp"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="44dp"
            android:fontFamily="@font/red_hat_display_medium"
            android:text="@string/conf_secondary" />

        <TextView
            android:id="@+id/conf_primary"
            style="@style/conf_primary"
            android:layout_width="153dp"
            android:layout_height="53dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="113dp"
            android:text="@string/conf_primary"
            android:fontFamily="@font/red_hat_display_medium"/>

        <TextView
            android:id="@+id/res_primary"
            android:layout_width="272dp"
            android:layout_height="94dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="125dp"
            android:gravity="top"
            android:text="@string/res_primary"
            android:textAppearance="@style/res_primary"
            android:fontFamily="@font/red_hat_display_black"/>

        <TextView
            android:id="@+id/result_heading"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginLeft="-1dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="113dp"
            android:layout_marginRight="113dp"
            android:layout_marginBottom="195dp"
            android:gravity="top"
            android:text="@string/results_heading"
            android:textAppearance="@style/results_heading"
            android:fontFamily="@font/red_hat_display_medium"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
