<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_splash_screen_bg">

    <!-- Using -->

    <View
        android:id="@+id/ss_bubbles"
        android:layout_width="414dp"
        android:layout_height="872dp"
        android:background="@drawable/ic_ss_bubbles"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/using"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/red_hat_display_medium"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/using"
        android:textAppearance="@style/using"
        app:layout_constraintStart_toStartOf="@+id/breast_canc"
        app:layout_constraintTop_toBottomOf="@+id/breast_canc" />

    <!-- Breast Cancer Detection -->

    <TextView
        android:id="@+id/machine_lea"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/red_hat_display_black"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/machine_lea"
        android:textAppearance="@style/machine_lea"
        app:layout_constraintStart_toStartOf="@+id/using"
        app:layout_constraintTop_toBottomOf="@+id/using" />

    <TextView
        android:id="@+id/breast_canc"
        android:layout_width="254dp"
        android:layout_height="209dp"
        android:fontFamily="@font/red_hat_display_black"
        android:gravity="top"
        android:lineSpacingExtra="-10dp"
        android:text="@string/breast_canc"
        android:textAppearance="@style/breast_canc"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

</androidx.constraintlayout.widget.ConstraintLayout>